# camelot

./: .gitignore  INSTALL.md  README.md  arthur.json  arthur_invalid_line_length.json  arthur_long_line.json  camelot.opam  camelot.opam.template  coverage.sh  dune-project
.github/workflows/: workflow.yml
lib/arthur/: arthur.ml  arthur_parse.ml  dune
lib/canonical/: dune
lib/report/: display.ml  dune
lib/style/: check.ml  check_ignore.ml  checkers.ml  destructure.ml  dune  equality.ml  hof.ml  lexical.ml  lift.ml  match.ml  record.ml  verbose.ml
lib/traverse/: attributes.ml  attributes.mli  descent.ml  dune  find.ml  iterator.ml  traverse.ml
lib/utils/: astutils.ml  dune  free_vars.ml  side_effects.ml
test/: dune  test.ml
test/examples/: attributes.ml  destructure.ml  hof.ml  if.ml  lift.ml  long_line.ml  record.cmi  record.cmo  record.ml  verbose.ml
