( library
  (name tester)
  (inline_tests (deps examples/lexical.ml examples/equality.ml examples/verbose.ml examples/if.ml examples/match.ml examples/hof.ml examples/attributes.ml examples/record.ml examples/lift.ml))
  (libraries report canonical traverse)
  (preprocess (pps ppx_expect bisect_ppx)))